--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,96 @@
-hydra-core==1.0.5
-omegaconf==2.0.6
-python-dotenv==0.20.0
-plyfile==0.7.4
-trimesh==3.14.0
-loguru==0.6.0
-wandb==0.13.2
-fvcore==0.1.5.post20220512
-cloudpickle==2.1.0
-albumentations==1.2.1
-volumentations==0.1.8
-matplotlib==3.5.3
-pyviz3d==0.2.28
-importlib-metadata==3.10.1
-tensorboard==2.10.0
-pyDeprecate==0.3.2
+absl-py==2.1.0
+aiohttp==3.9.3
+aiosignal==1.3.1
 antlr4-python3-runtime==4.8
+async-timeout==4.0.3
+attrs==23.2.0
 black==23.3.0
-pytorch-lightning==1.7.2
-ninja==1.11.1
-wheel==0.38.4
-torchmetrics==0.11.4
-natsort==8.3.1
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+docker-pycreds==0.4.0
+filelock==3.13.4
 fire==0.5.0
+frozenlist==1.4.1
+fsspec==2024.3.1
+fvcore==0.1.5.post20221221
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.29.0
+google-auth-oauthlib==1.0.0
+grpcio==1.62.1
+hydra-core==1.0.5
+idna==3.6
+importlib-metadata==3.10.1
+importlib_resources==6.4.0
+iopath==0.1.10
+Jinja2==3.1.3
+joblib==1.4.0
+loguru==0.6.0
+Markdown==3.3.4
+MarkupSafe==2.1.5
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+natsort==8.3.1
+networkx==3.1
+ninja==1.11.1
+numpy==1.24.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+omegaconf==2.0.6
+packaging==24.0
+pathspec==0.12.1
+pathtools==0.1.2
+pillow==10.3.0
+platformdirs==4.2.0
+portalocker==2.8.2
+promise==2.3
+protobuf==3.20.3
+psutil==5.9.8
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyDeprecate==0.3.2
+python-dotenv==0.20.0
+pytorch-lightning==1.7.2
+PyYAML==5.4.1
+requests==2.31.0
+requests-oauthlib==2.0.0
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.10.1
+sentry-sdk==1.45.0
+setproctitle==1.3.3
+shortuuid==1.0.13
+six==1.16.0
+smmap==5.0.1
+sympy==1.12
+tabulate==0.9.0
+tensorboard==2.14.0
+tensorboard-data-server==0.7.2
+termcolor==2.4.0
+threadpoolctl==3.4.0
+tomli==2.0.1
+torchmetrics==0.11.4
+tqdm==4.66.2
+triton==2.2.0
+typing_extensions==4.11.0
+urllib3==2.2.1
+volumentations==0.1.8
+wandb==0.13.2
+Werkzeug==3.0.2
+yacs==0.1.8
+yarl==1.9.4
+zipp==3.18.1
