--- a/conf/data/kitti.yaml
+++ b/conf/data/kitti.yaml
@@ -1,8 +1,3 @@
-# @package _group_
-
-# these parameters are inherited by datasets, data_loaders and collators
-# but they might be overwritten
-
 # splits
 train_mode: train
 validation_mode: validation
@@ -13,13 +8,14 @@ ignore_label: 255
 add_distance: true
 in_channels: 2
 num_labels: 19
-instance_population:  ${general.instance_population}
+instance_population: ${general.instance_population}
 sweep: 2
-min_stuff_cls_id: 9
+stuff_cls_ids: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
 min_points: 50
 class_names: ['car', 'bicycle', 'motorcycle', 'truck', 'other-vehicle', 'person', 'bicyclist',
 'motorcyclist', 'road', 'parking', 'sidewalk', 'other-ground', 'building', 'fence', 'vegetation',
 'trunk', 'terrain', 'pole', 'traffic-sign']
+sample_sizes: [4000, 8000, 16000, 32000]
 
 # data loader
 pin_memory: true
