--- a/conf/loss/set_criterion.yaml
+++ b/conf/loss/set_criterion.yaml
@@ -1,8 +1,7 @@
-# @package _group_
-_target_: models.criterion.SetCriterion
+_target_: models.loss.LossOverall
 num_classes: ${data.num_labels}
-eos_coef: 0.1
-losses:
-  - "labels"
-  - "masks"
-  - "bboxs"
+w_class: 2.
+w_mask: 5.
+w_dice: 2.
+w_box: 5.
+no_object_coef: 0.1
