--- a/conf/model/mask4former.yaml
+++ b/conf/model/mask4former.yaml
@@ -1,22 +1,22 @@
-# @package _group_
 _target_: models.Mask4Former
 
 # backbone
 backbone:
   _target_: models.Res16UNet34C
-  config:
-    dialations: [ 1, 1, 1, 1 ]
-    conv1_kernel_size: 5
-    bn_momentum: 0.02
   in_channels: ${data.in_channels}
   out_channels: ${data.num_labels}
+  planes: [32, 64, 128, 256, 256, 128, 96, 96]
+  layers: [2, 3, 4, 6, 2, 2, 2, 2]
+  init_dim: 32
+  conv1_kernel_size: 3
+  bn_momentum: 0.02
 
 # transformer parameters
 num_queries: 100
 num_heads: 8
 num_decoders: 3
 num_levels: 4
-sample_sizes: [4000, 8000, 16000, 32000]
+sample_sizes: ${data.sample_sizes}
 mask_dim: 128
 dim_feedforward: 1024
 num_labels: ${data.num_labels}
